[package]
name = "msq"
version = "0.1.0"
edition = "2024"

[dependencies]
transport_layer = { git = "https://github.com/gosh-sh/acki-nacki", package = "transport-layer", branch = "feature/node-1623-create-transport-layer-crate" }
anyhow = "1.0.98"
# ring = "0.17.14"
rustls-pki-types = { version = "1.8.0" }
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"]  }
futures-util = "0.3.28"
bytes = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = { version = "0.9" }
shellexpand = { version = "3.1.0", features = ["path"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
rand = "0.9.1"
futures = "0.3.31"
libc = "0.2.172"
msquic-async = { path = "../msquic-async-rs/msquic-async" }
